WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230754
Fix for crash in accessibility/Mac/search-predicate-for-adhoc-radio-groups.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=230754
Summary
Fix for crash in accessibility/Mac/search-predicate-for-adhoc-radio-groups.ht...
Andres Gonzalez
Reported
2021-09-24 09:08:56 PDT
Fix for crash in accessibility/Mac/search-predicate-for-adhoc-radio-groups.html in isolated tree mode.
Attachments
Patch
(11.95 KB, patch)
2021-09-24 09:29 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(13.52 KB, patch)
2021-09-24 10:34 PDT
,
Andres Gonzalez
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(13.13 KB, patch)
2021-09-24 10:58 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(13.13 KB, patch)
2021-09-27 08:05 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-09-24 09:09:14 PDT
<
rdar://problem/83498599
>
Andres Gonzalez
Comment 2
2021-09-24 09:29:47 PDT
Created
attachment 439155
[details]
Patch
chris fleizach
Comment 3
2021-09-24 09:52:43 PDT
Comment on
attachment 439155
[details]
Patch In file included from /Volumes/Data/worker/iOS-14-Build-EWS/build/WebKitBuild/Release-iphoneos/DerivedSources/WebCore/unified-sources/UnifiedSource5-mm.mm:3: ./accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:2777:34: error: no member named 'getAttribute' in 'WebCore::AXCoreObject'
Andres Gonzalez
Comment 4
2021-09-24 10:34:08 PDT
Created
attachment 439160
[details]
Patch
Andres Gonzalez
Comment 5
2021-09-24 10:58:43 PDT
Created
attachment 439165
[details]
Patch
Andres Gonzalez
Comment 6
2021-09-27 08:05:13 PDT
Created
attachment 439353
[details]
Patch
EWS
Comment 7
2021-09-27 09:03:26 PDT
Committed
r283115
(
242173@main
): <
https://commits.webkit.org/242173@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 439353
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug